# DhammaShell

./: .gitignore  .prettierrc  README.md  dhammashell-1.0.0.ebuild  format.py  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
audit_reports/: audit_report_20250527_160933.txt  audit_report_template.txt
dhammashell/: __init__.py  alignment.py  cli.py  config.py  main.py  middleseek.py  prompt.py
dhammashell/empathy_research/: __init__.py  audit.py  data_collector.py  empathy_analyzer.py  metrics.py  pre_post_test.py  research_collector.py  research_report.py
dhammashell/middleseek/: __init__.py  alignment.py  core.py  protocol.py
templates/volunteer-description/: consultant  family-reunification
tests/: README_EMPATHY_TESTS.md  test_empathy_research.py  test_main.py
